--- a/index.html
+++ b/index.html
@@ -15,9 +15,13 @@
     <div class="row">
         <div class="btn-group" role="group" aria-label="Default button group">
             <button type="button" class="btn btn-default" id="show">Show</button>
-            <button type="button" class="btn btn-default" id="stop">Pause</button>
+            <button type="button" class="btn btn-default" id="pause">Pause</button>
             <button type="button" class="btn btn-default" id="continue">Continue</button>
             <button type="button" class="btn btn-default" id="refresh">Refresh</button>
+        </div>
+        <div class="btn-group" role="group" aria-label="Default button group">
+            <button type="button" class="btn btn-default" id="run">Run</button>
+            <button type="button" class="btn btn-default" id="stop">Stop</button>
         </div>
     </div>
     <br/>
