--- a/index.html
+++ b/index.html
@@ -7,33 +7,53 @@
     <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
-<div class="container text-center well">
-    <div class="row">
-        <p id="timerName">Choose your Timer</p>
-        <p id="print">00 : 00 : 00.0</p>
+<div class="container well text-center">
+    <ul class="nav nav-tabs">
+        <li class="active"><a data-toggle="tab" href="#countdownTab" id="countdownLink">Countdown</a></li>
+        <li><a data-toggle="tab" href="#stopwatchTab" id="stopwatchLink">Stopwatch</a></li>
+    </ul>
+
+    <div class="tab-content ">
+        <div id="countdownTab" class="tab-pane fade in active">
+                <div class="row">
+                    <p>Countdown</p>
+                    <p class="print">00 : 00 : 00</p>
+                </div>
+                <div class="row">
+                    <br/>
+                    <div class="btn-group" role="group" aria-label="Default button group">
+                        <button type="button" class="btn btn-default continue" >Continue</button>
+                        <button type="button" class="btn btn-default pause">Pause</button>
+                        <button type="button" class="btn btn-default refresh">Refresh</button>
+                    </div>
+
+                </div>
+        </div>
+        <div id="stopwatchTab" class="tab-pane fade">
+          <div class="row">
+                <p>Stopwatch</p>
+                <p class="print">00 : 00 : 00</p>
+            </div>
+            <div class="row">
+                <div class="row">
+                    <input size="2" type="text" id="stopSec"/>:Number of Seconds
+
+                </div>
+                <br/>
+                <div class="btn-group" role="group" aria-label="Default button group">
+                    <button type="button" class="btn btn-default continue" >Continue</button>
+                    <button type="button" class="btn btn-default pause">Pause</button>
+                    <button type="button" class="btn btn-default refresh">Refresh</button>
+                </div>
+
+            </div>
+        </div>
     </div>
-    <div class="row">
-        <div class="row">
-            <button type="button" class="btn btn-default" id="countdown">Countdown</button>
-            <button type="button" class="btn btn-default" id="stopwatch">Stopwatch</button>
-            <button type="button" class="btn btn-default" id="alarmclock" >Run Alarm clock </button> <input size="2" type="text" id="stopSec"/>:Number of Seconds
-        </div>
-        <br/>
-        <div class="btn-group" role="group" aria-label="Default button group">
-            <button type="button" class="btn btn-default" id="show">Show</button>
-            <button type="button" class="btn btn-default" id="pause">Pause</button>
-            <button type="button" class="btn btn-default" id="continue">Continue</button>
-            <button type="button" class="btn btn-default" id="refresh">Refresh</button>
-        </div>
-        <div class="btn-group" role="group" aria-label="Default button group">
-            <button type="button" class="btn btn-default" id="run">Run</button>
-            <button type="button" class="btn btn-default" id="stop">Stop</button>
-        </div>
-    </div>
-    <br/>
 </div>
 
-<script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-<script src="timer.js"></script>
+
+    <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+<script src="js/timer.js"></script>
 </body>
 </html>
